--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{#{% extends 'base.html' %}#}
 
-{% block content %}
+{#{% block content %}#}
 <h3>Login</h3>
 <form method="post">
     Username<br>
@@ -10,4 +10,4 @@
     <input type="password" name="password" required><br><br>
     <input class="btn" type="submit" name="submit" value="Submit">
 </form>
-{% endblock %}
+{#{% endblock %}#}
