--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,10 @@
-{#{% extends 'base.html' %}#}
-
-{#{% block content %}#}
-<h3>Login</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>index</title>
+</head>
+<body>
 <form method="post">
     Username<br>
     <input type="text" name="username" required><br><br>
@@ -10,4 +13,5 @@
     <input type="password" name="password" required><br><br>
     <input class="btn" type="submit" name="submit" value="Submit">
 </form>
-{#{% endblock %}#}
+</body>
+</html>
