--- a/templates/upload.html
+++ b/templates/upload.html
@@ -74,10 +74,11 @@
 			</dl>
 		</li>
 	</ul>
-	<div style="height: 200px;width: 200px;position:relative;margin-left: 600px;top: 400px;">
+	<div style="height: 200px;width: 200px;position:relative;margin-left: 600px;top: 300px;">
 	<form action="" enctype='multipart/form-data' method='POST'  >
         <input type="file" name="file" style="margin-top:20px;"/>
         <br>
+		 <input type="submit" value="上传" class="button-new" style="margin-top:15px;"/>
     </form>
 </div>
 </div>
