--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html><!--代码由www.magicalcoder.com可视化布局器拖拽生成 资源请自行下载到本地-->
 <head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<title>upload</title>
+<title>homepage</title>
 <link href="https://cdn.jsdelivr.net/npm/layui-src@2.4.5/dist/css/layui.css" rel="stylesheet"/>
 <link href="http://lowcode.magicalcoder.com/magicalcoder/assets/drag/ui/magicalcoder/1.1.0/magicalcoder.css" rel="stylesheet"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/json3/3.3.3/json3.min.js"></script>
@@ -16,10 +16,8 @@
 </style>
 
 </head>
-<body  class="layui-form"  >
-
-
-<div id="magicalDragScene" class="mc-root mc-ui-absolute-pane"  >
+<body  class="layui-form" >
+<div id="magicalDragScene" class="mc-root mc-ui-absolute-pane">
 	<ul class="layui-nav layui-nav-tree" style="position: absolute; left: 0%; top: 15%; width: 20%; height: 600px;">
 		<li class="layui-nav-item">
 			<a href="javascript:;">照片</a>
@@ -74,14 +72,7 @@
 			</dl>
 		</li>
 	</ul>
-	<div style="height: 200px;width: 200px;position:relative;margin-left: 600px;top: 400px;">
-	<form action="" enctype='multipart/form-data' method='POST'  >
-        <input type="file" name="file" style="margin-top:20px;"/>
-        <br>
-    </form>
 </div>
-</div>
-
 <script>
 //以下脚本为标签属性转换成layui组件的还原过程
 //调试:打开浏览器控制台(F12),在代码中某行增加 debugger 即可调试
