--- a/templates/upload.html
+++ b/templates/upload.html
@@ -66,7 +66,7 @@
 			<a style="top: -10px; position: relative; width: 100%; right: 15px;" href="javascript:;">用户</a>
 			<dl class="layui-nav-child">
 				<dd>
-					<a href="./grss">用户信息</a>
+					<a href="./grxx">用户信息</a>
 				</dd>
 				<dd>
 					<a href="./upload">上传</a>
